[project]
name = "ultimate_ai_powered_digital_empire___multi_platform_domination_with_voice_video_cloning"
version = "0.1.0"
description = "ultimate_ai_powered_digital_empire___multi_platform_domination_with_voice_video_cloning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "python-multipart>=0.0.9,<1.0.0",
    "aiofiles>=23.2.0,<1.0.0"
]

[project.scripts]
run_crew = "ultimate_ai_powered_digital_empire___multi_platform_domination_with_voice_video_cloning.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
